Move teacher test to listing creation
